# RSound

./: .gitignore  AUTHORS  ChangeLog  DOCUMENTATION  HACKING  INSTALL  Makefile  Makefile.am  Makefile.in  README  alsa.c  alsa.h  ao.c  ao.h  audio.h  autogen.sh  client.c  configure  configure.ac  daemon.c  endian.c  endian.h  oss.c  oss.h  porta.c  porta.h  rsound-common.c  rsound.h  rsound.pc.in
autom4te.cache/: output.0  requests  traces.0  traces.1
binds/cs/: RSound.cs
binds/python/: rsound.py
ckport/: librsound.ckport
cpp/: rsound.hpp
doc/: rsd.1  rsdplay.1
patches/: INSTALL  deadbeef-rsound.patch  mpd-rsound.patch  mplayer-rsound-pthread.patch  mplayer-rsound.patch  rsound-vlc.patch  vlc-rsound.patch
patches/alsa/: Makefile  pcm_rsound.c
patches/deadbeef/: Makefile  rsound-plugin.c
patches/vlc/: Makefile  rsound-plugin.c
python/: rsound.py
src/: Makefile  al.c  al.h  alsa.c  alsa.h  ao.c  ao.h  audio.c  audio.h  buffer.h  client.c  config.h  config.mk  configure  configure.h  daemon.c  endian.c  endian.h  muroar-internal.h  muroar.c  oss.c  oss.h  porta.c  porta.h  proto.c  proto.h  pulse.c  pulse.h  resampler.c  resampler.h  roarvs.c  rsound-common.c  rsound.h
src/cuse-ross/: Makefile  cuse-ross.c
src/cuse-ross/test/: Makefile  test-oss.c
src/drivers/: al.c  al.h  alsa.c  alsa.h  ao.c  ao.h  coreaudio.c  coreaudio.h  dsound.c  dsound.h  jack.c  jack.h  muroar-internal.h  muroar.c  oss.c  oss.h  porta.c  porta.h  pulse.c  pulse.h  roarvs.c  roarvs.h
src/fuse-rsound/: Makefile  cuse-ross.c  fuse-ross.c
src/librsound/: buffer.c  buffer.h  librsound.c  rsound.h
src/oss-emul/: Makefile  librsoundoss.c  ross
src/tests/: Makefile  rsd-simple-start  rsd-simple-start.c
src/win32/: Makefile  README.txt
src/win32/include/: poll.h  rsound.h
src/win32/include/pthread/: pthread.h
src/win32/muroar/: muroar.c  muroar.h  muroar_beep.c  muroar_noop.c  muroario.c
src/win32/src/: poll.c  pthread.c
